istio-demo/kubernetes/deployment_java_downstream.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-downstream-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-downstream-service
  template:
    metadata:
      labels:
        app: java-downstream-service
        version: v1
    spec:
      serviceAccountName: java-downstream-service
      containers:
      - name: java-downstream-service
        image: shubham8955701054/java-downstream-service
---
apiVersion: v1
kind: Service
metadata:
  name: java-downstream-service
spec:
  ports:
  - port: 7090
    targetPort: 7090
    protocol: TCP
    name: http
  selector:
    app: java-downstream-service
