istio-demo/kubernetes/deployment_node_upstream.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-upstream-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-upstream-service
  template:
    metadata:
      labels:
        app: node-upstream-service
        version: v1
    spec:
      serviceAccountName: node-upstream-service
      containers:
      - name: node-upstream
        image: shubham8955701054/nodeup
---
apiVersion: v1
kind: Service
metadata:
  name: node-upstream-service
spec:
  ports:
  - port: 4000
    targetPort: 4000
    protocol: TCP
    name: http
  selector:
    app: node-upstream-service
