istio-demo/kubernetes/gateway_node_upstream.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway-node-upstream
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: upstream
spec:
  hosts:
  - "*"
  gateways:
  - gateway-node-upstream
  http:
  - match:
    - uri:
        prefix: /hello-world-wrapper/hello
    - uri:
        prefix: /hello-world-wrapper/hi
    route:
    - destination:
        host: node-upstream-service
        port:
          number: 4000
